Fixed spinner on mobile and disabled donate page

--- a/Ziwadi Trade Prototype/ClientApp/src/styles/Donate.css
+++ b/Ziwadi Trade Prototype/ClientApp/src/styles/Donate.css
@@ -11,6 +11,14 @@
   border-radius: 10px;
 }
 
+.updated-message{
+  margin-top: 275px;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  color: #BF2E1B;
+}
+
 .form-control:focus {
   border-color: #BF2E1B;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(191, 46, 27, 0.6);
