--- a/Ziwadi Trade Prototype/ClientApp/src/styles/Spinner.css
+++ b/Ziwadi Trade Prototype/ClientApp/src/styles/Spinner.css
@@ -138,6 +138,6 @@
 
 @media screen and (max-width: 760px) {
   .hex {
-    font-size: 50px;
+    font-size: 70px;
   }
 }
